# zero2prod

./: .env.example  .envrc.example  .gitignore  .pre-commit-config.yaml  .tarpaulin.toml  Cargo.toml  Dockerfile  sqlx-data.json
.cargo/: audit.toml
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.override.example.yml  docker-compose.yml  postCreate.sh
.github/: clear_caches.sh  install_sqlx_cli.sh
.github/workflows/: audit-on-push.yml  general.yml  scheduled-audit.yml
configuration/: base.yaml  production.yaml
migrations/: 20221005054125_create_subscription_tokens_table.sql
src/: authentication.rs  configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: newsletters.rs  subscribtions.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/home/: home.html
src/routes/login/: login.html  post.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
