[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
chrono = "0.4.19"
config = "0.13.1"
env_logger = "0.9.0"
log = "0.4.17"
reqwest = "0.11.11"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.6.0", features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.35", features = ["log"] }
uuid = { version = "1.1.2", features = ["v4"] }
