[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
anyhow = "1.0.66"
argon2 = { version = "0.4.1", features=["std"] }
base64 = "0.13.1"
# Can use default features after 0.4.22 release (https://github.com/chronotope/chrono/issues/602)
chrono = { version = "0.4", default-features = false, features = ["clock"] }
config = "0.13"
rand = { version = "0.8", features=["std_rng"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
sha3 = "0.10.6"
sqlx = { version = "0.6", features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
thiserror = "1.0.37"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.6"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
unicode-segmentation = "1"
uuid = { version = "1.1", features = ["v4"] }
validator = "0.16"

[dev-dependencies]
claim = "0.5"
fake = "2"
linkify = "0.9"
once_cell = "1"
quickcheck = "1"
quickcheck_macros = "1"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt"] }
wiremock = "0.5.14"
